...
//
//  Created by Geoffroy Lesage on 26/7/2023.
//

import Foundation

let API_HOST = "localhost:8000"
let AUTH_TOKEN = "Geo"

actor EVYAPIManager {
  private let rpcWS: any EVYRPCTransport
  private var authed: Bool = false
  private var installedDisconnectHandler = false
...
